# Sion

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md
bench/: CMakeLists.txt  common.hpp  plot_benchmark.py
bench/flash_attention/: CMakeLists.txt  fa_bench.cpp  fa_bench_runner.sh  fa_compare.md
bench/hgemm/: CMakeLists.txt  cublas_hgemm_bench.cpp  hgemm_bench.cpp  hgemm_bench_runner.sh  hgemm_compare.md
bench/sgemm/: CMakeLists.txt  cublas_bench.cpp  sgemm_bench.cpp  sgemm_bench_runner.sh  sgemm_compare.md  sgemm_kernel_compare_runner.sh
bench/sgemm/general_ver/: sgemm_compare.md
cmake/: FelixConfig.cmake.in  SionConfig.cmake.in
include/felix/: felix.hpp  registry.hpp  status.hpp
include/felix/detail/: detail.hpp
include/sion/: sion.cppm  sion.hpp
python/: CMakeLists.txt  binding.cpp  flash_attn_test.py  sgemm_test.py  test.py
python/example/: MNIST.py
src/: CMakeLists.txt  common.hpp
src/base/: CMakeLists.txt
src/felix/: CMakeLists.txt
src/felix/base/: CMakeLists.txt  felix_api.cpp  registry.cpp  status.cpp
src/felix/flash_attention/: CMakeLists.txt  ampere_flash_attn_mma16168_64_1D_warp_tiling_kernel_launch.cu  flash_attn.cu
src/felix/flash_attention/kernels/: ampere_flash_attn_mma16168_64_1D_warp_tiling.cuh  ampere_flash_attn_mma16168_64_2D_warp_tiling.cuh  cute_flash_attn_mma16816.cuh  softmax.h
src/felix/gemm/: CMakeLists.txt
src/felix/gemm/hgemm/: CMakeLists.txt  cute_hgemm_128x128_nn_kernel_launch.cu  cute_hgemm_128x128_nt_kernel_launch.cu  hgemm.cu
src/felix/gemm/hgemm/kernels/: ampere_hgemm_wmma_128x128.cuh  cute_ampere_hgemm_16816.cuh
src/felix/gemm/sgemm/: CMakeLists.txt  ampere_sgemm_128x128_nn_a1b0_kernel_launch.cu  ampere_sgemm_64x64_nn_kernel_launch.cu  cute_sgemm_128x128_nn_kernel_launch.cu  cute_sgemm_128x128_nn_wt_db_kernel_launch.cu  cute_sgemm_128x128_nn_wt_kernel_launch.cu  cute_sgemm_64x64_nn_kernel_launch.cu  cute_sgemm_64x64_nn_swizzle_kernel_launch.cu
src/felix/gemm/sgemm/kernels/: ampere_sgemm_128x128x16_aligned_wip.cuh  cute_ampere_sgemm_64x64_nn.cuh  cute_sgemm.cuh  cute_sgemm_128x128_naive.cuh  cute_sgemm_128x128_wt.cuh  cute_sgemm_128x128_wt_db.cuh
src/felix/topk/: CMakeLists.txt  sorting_radix_select_kernel_launch.cu
src/felix/topk/kernels/: sorting_radix_select.cuh
src/felix/utils/: macro.h  swizzle.hpp  utils.h
src/flash_attention/: CMakeLists.txt  ampere_flash_attn_mma16168_64.cuh  ampere_flash_attn_mma16168_64_1D_warp_tiling.cuh  ampere_flash_attn_mma16168_64_2D_warp_tiling.cuh  fa.cpp  fa.cu  fa.cuh  fa_v1.cuh  fa_v2_mma.cuh  flash_attn.cpp  flash_attn.cu
src/flash_attention/kernels/: ampere_flash_attn_mma16168_64_1D_warp_tiling.cuh
src/gemm/: CMakeLists.txt
src/gemm/hgemm/: CMakeLists.txt  hgemm.cu
src/gemm/sgemm/: CMakeLists.txt  ampere_sgemm_128x128x16_aligned.cuh  ampere_sgemm_64x64.cuh  ampere_sgemm_64x64_modular.cuh  ampere_sgemm_64x64_monolithic.cuh  sgemm.cu
src/gemm/sgemm/kernels/: ampere_sgemm_128x128x16_aligned_wip.cuh  cute_sgemm.cuh
src/hgemm/: ampere_hgemm.cuh
src/sgemm/: CMakeLists.txt  sgemm.cu  sgemm.cuh
src/sion/: CMakeLists.txt  common.hpp
src/sion/flash_attention/: CMakeLists.txt  flash_attn.cpp
src/sion/gemm/: CMakeLists.txt  gemm.cpp
src/sion/gemm/hgemm/: hgemm.cpp
src/sion/gemm/sgemm/: sgemm.cpp
src/utils/: swizzle.hpp  utils.h
tests/: CMakeLists.txt  common.hpp  compare.hpp
tests/flash_attention/: CMakeLists.txt  fa_test.cpp
tests/hgemm/: CMakeLists.txt  hgemm_test.cpp
tests/sgemm/: CMakeLists.txt  sgemm_test.cpp
